2002-09-10  Marcus Brinkmann  <marcus@gnu.org>

	* display.c (DISPLAY_CHANGE_FLAGS): New macro.
	(struct changes): New member FLAGS.
	(display_flush_filechange): Handle change of flags.
	(display_output_some): Initialize DISPLAY->changes.flags.
	(display_start_output): Clear CONS_FLAGS_SCROLL_LOCK in DISPLAY.
	(display_stop_output): Set CONS_FLAGS_SCROLL_LOCK in DISPLAY.

	* display.c (display_output_some): If iconv fails with EILSEQ,
	skip the next byte in the buffer and print a replacement
	character.

2002-08-30  Marcus Brinkmann  <marcus@gnu.org>

	* display.c (display_create): Likewise.  Set
	DISPLAY->attr.attr_def instead the color versions.
	(struct attr): Remove fgcol_def, bgcol_def, and add attr_def.
	(handle_esc_bracket_m): Set all attributes to their defaults for
	case 0.  Set default color using default attribute for case 49 and
	case 39.
	(display_output_one): Likewise.
	* console.c (options): Add --attribute option.
	(parse_opt): Parse --attribute option.  Bail out with argp_error
	on error.
	(netfs_append_args): ...
	(struct cons): Replace foreground and background with new
	attribute member.
	(vcons_lookup): Pass CONS->attribute to display_create instead
	CONS->foreground and CONS->background.
	(main): Set default colors and attributes.
	(parse_attributes): New function.

	* console.c (parse_opt): If STATE->input is zero, use
	netfs_root_node's hook to cons.

2002-08-28  Marcus Brinkmann  <marcus@gnu.org>

	* display.c (screen_fill): Take CUR_LINES modulo LINES.
	(screen_shift_left): Likewise.
	(screen_shift_right): Likewise.
	(linefeed): Don't take CUR_LINES modulo LINES here.

2002-08-28  Marcus Brinkmann  <marcus@gnu.org>

	* display.c (display_output_one): Also set USER->cursor.status to
	normal for ECMA-48 <RIS> (hard reset).

2002-08-23  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (DIST_FILES): New variable.
	* hurd.ti: New file describing the terminal capabilities of the
	Hurd console server.
