@@ -1,3 +1,8 @@
+2002-09-16  Marcus Brinkmann  <marcus@gnu.org>
+
+	* console.h (conchar_attr_t): Add bits for italic and bold text
+	attributes.
+
 2002-09-10  Marcus Brinkmann  <marcus@gnu.org>
 
 	* console.h (struct cons_display): New member FLAGS.
